Expect SENTRY_SECRET_KEY to be stored in .env file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Environment variable to pass values to the docker containers
+.env
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
